Fix contrast on landing page link

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -23,3 +23,7 @@
 .Heading2 {
     font-size: 1.5rem;
 }
+
+.Link {
+    font-size: 1.2rem;
+}
