--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -2,4 +2,5 @@
     border-radius: 50%;
     object-fit: cover;
     margin: 0.7rem;
+    font-size: 1.2rem;
 }
